# InboxKit

./: README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  ws_manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ExitConfirmModal.tsx  Grid.tsx  Leaderboard.tsx  MatchOverlay.tsx  MatchTimer.tsx  OnlineCount.tsx  Sidebar.tsx  Tile.tsx  UserSetupModal.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: session.ts
frontend/src/store/: useGridStore.ts
